ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: web-production.apps.mycompany.com
      http:
# The pathType parameter specifies how to match the path component of the URL. 
# If set to Exact, then the path must be exactly equal to the path parameter.
# If set to Prefix, then any path that starts with the path component matches.
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
